minor spacing bug
container in skillset section had too much space when viewed below 992px

--- a/css/body.css
+++ b/css/body.css
@@ -654,7 +654,6 @@ padding: 100px;
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
     position: absolute;
-    top: 40%;
   }
 
 }
